--- a/portafolio.html
+++ b/portafolio.html
@@ -7,9 +7,38 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
      <link rel="stylesheet" href="style.css">
-     
+     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
 </head>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About ME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Videos
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
 <body>
     <header> 
         <nav>
@@ -21,8 +50,8 @@
                       </div>
                       <div class="col-md-6">
                           <ul>
-                              <li><a href="#">About Me</a></li>
-                              <li><a href="mailto:andreavillanew96@gmail.com">Contacto</a></li>
+                              <li><a href="#"></a></li>
+                              <li><a href="mailto:andreavillanew96@gmail.com"></a></li>
                           </ul>
                       </div>
 
@@ -34,7 +63,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <h1>Andrea Villanueva Solis <span class="gris">Aficionada del Adiestramiento Canino
+                    <h1>Andrea Villanueva Solis. <span class="gris">Aficionada del Adiestramiento Canino
                     </span>
 
                     </h1>
@@ -52,7 +81,7 @@
                    <img src="imagenb.jpg" alt="proyecto 2" class="img-responsive img-proyecto" width="500" height="">
 
                </div>
-               <div class="col-md-4">
+               <div class="col-md-4 proyecto" >
                    <h2>Pastor Alemán</h2>
                    <p>
                     Deutscher Schäferhund
@@ -69,10 +98,10 @@
            </div>
                <div class="row">
                   <div class="col-md-8">
-                      <img src="imagenc.jpg" alt="proyecto 2" class="img-responsive img-proyecto" width="500" height="500">
+                      <img src="imagenc.jpg" alt="proyecto 2" class="img-responsive" class="img-proyecto" width="500" height="500">
 
                    </div>
-            <div class="col-md-4">
+            <div class="col-md-4 proyecto">
                 <h2>Adiestramiento Canino</h2>
                 <p>
                  Guardia y Protección
@@ -92,7 +121,7 @@
                 <img src="imagend.jpg" alt="proyecto 2" class="img-responsive img-proyecto" width="500" height="300">
 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 proyecto">
                 <h2>Deporte Canino</h2>
                 <p>
                  Shutzhund
@@ -115,9 +144,9 @@
                 </div>
                 <div class="col-md-6" social>
                     <ul>
-                        <li><a href="#"><img src="https://cdn.icon-icons.com/icons2/693/PNG/128/Facebook_Rounded_Solid_icon-icons.com_61562.png" width="20" height="20" alt=""></a></li>
-                        <li><a href="#"><img src="https://image.flaticon.com/icons/svg/1384/1384015.svg" width="20" height="20" alt=""></a></li>
-                        <li><a href="#"><img src="https://image.flaticon.com/icons/png/512/23/23681.png" width="20" height="20" alt=""></a></li>
+                        <li><a href="#"><img src="https://cdn.icon-icons.com/icons2/693/PNG/128/Facebook_Rounded_Solid_icon-icons.com_61562.png" width="20" height="20" alt="iconof"></a></li>
+                        <li><a href="#"><img src="https://image.flaticon.com/icons/svg/1384/1384015.svg" width="20" height="20" alt="iconoi"></a></li>
+                        <li><a href="#"><img src="https://image.flaticon.com/icons/png/512/23/23681.png" width="20" height="20" alt="iconot"></a></li>
                         
                     </ul>
                 </div>
