--- a/portafolio.html
+++ b/portafolio.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Portafolio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About ME</a>
@@ -31,7 +31,7 @@
             Videos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Action</a> <video src="https://youtu.be/dJJNOECY9JU"></video>
             <a class="dropdown-item" href="#">Another action</a>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
@@ -98,7 +98,7 @@
            </div>
                <div class="row">
                   <div class="col-md-8">
-                      <img src="imagenc.jpg" alt="proyecto 2" class="img-responsive" class="img-proyecto" width="500" height="500">
+                      <img src="imagenc.jpg" alt="proyecto 2"   class=" foto img-responsive" class="img-proyecto" width="500" height="500">
 
                    </div>
             <div class="col-md-4 proyecto">
@@ -139,14 +139,14 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-6" copy>
+                <div class="col-md-6 copy">
                     &copy; 2020 Adiestramiento y Deporte Canino.
                 </div>
-                <div class="col-md-6" social>
+                <div class="col-md-6 social">
                     <ul>
-                        <li><a href="#"><img src="https://cdn.icon-icons.com/icons2/693/PNG/128/Facebook_Rounded_Solid_icon-icons.com_61562.png" width="20" height="20" alt="iconof"></a></li>
-                        <li><a href="#"><img src="https://image.flaticon.com/icons/svg/1384/1384015.svg" width="20" height="20" alt="iconoi"></a></li>
-                        <li><a href="#"><img src="https://image.flaticon.com/icons/png/512/23/23681.png" width="20" height="20" alt="iconot"></a></li>
+                        <li><a href="#"><img src="https://cdn.icon-icons.com/icons2/693/PNG/128/Facebook_Rounded_Solid_icon-icons.com_61562.png" alt="iconof"></a></li>
+                        <li><a href="#"><img src="https://image.flaticon.com/icons/svg/1384/1384015.svg" alt="iconoi"></a></li>
+                        <li><a href="#"><img src="https://image.flaticon.com/icons/png/512/23/23681.png"  alt="iconot"></a></li>
                         
                     </ul>
                 </div>
